# usegolib

./: .gitignore  LICENSE  README.md  pyproject.toml  spec0.md
docs/: abi.md  cli.md  compatibility.md  releasing.md  reproducible-builds.md  roadmap.md  security.md  testing.md  troubleshooting.md  versioning.md
examples/: insyra_basic.py
openspec/: project.md
tests/: conftest.py  test_abi.py  test_artifact_delete.py  test_artifact_index_cache.py  test_artifact_manifest.py  test_bindgen_docstrings.py  test_bindgen_unit.py  test_builder_missing_go_hint.py  test_builder_network_resilience.py  test_builder_resolve.py  test_builder_reuse.py  test_handle_package_vars.py  test_import_resolution.py  test_integration_build_and_call.py  test_integration_generics.py  test_integration_import_auto_build.py  test_integration_import_build_if_missing.py  test_integration_local_change_triggers_rebuild.py  test_integration_multi_return.py  test_integration_object_handles.py  test_integration_package_project.py  test_integration_package_vars.py  test_integration_package_wheel_install.py  test_library_sha256_verification.py  test_manifest_load_validation.py  test_packager.py  test_runtime_docstrings.py  test_schema_generics_mapping.py  test_schema_methods_validation.py  test_schema_validation.py  test_schema_validation_unit.py  test_schema_validation_uuid.py  test_schema_vars.py  test_typed_wrappers.py  test_variadic_any_support.py  test_version_conflict.py  test_windows_subprocess_decoding.py  test_zig_download_verification.py
tools/: validate_openspec.py  wsl_linux_tests.ps1
(+248 files in other folders)
