[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usegolib"
version = "0.0.0"
description = "Python runtime + builder for calling Go shared libraries directly (MessagePack ABI)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TimLai666" }]
dependencies = [
  "msgpack>=1.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
usegolib = "usegolib.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
